[gd_scene load_steps=4 format=4 uid="uid://dkm8x9p7qh3wv"]

[ext_resource type="Script" path="res://Controllers/UIController/UI/SelectionOverlay.gd" id="1_1"]

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0.2, 0.4, 0.9, 0, 0.2, 0.4, 0.9, 0, 0.2, 0.4, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="SelectionOverlay" type="CanvasLayer"]
script = ExtResource("1_1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = 360.0
offset_bottom = 200.0
grow_horizontal = 1
grow_vertical = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GradientBackground" type="TextureRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_1")

[node name="Border" type="ReferenceRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0, 0.6, 1, 1)
border_width = 2.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Item Name"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 10
text = "Type"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MetadataLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 11
text = "Metadata"
vertical_alignment = 0
autowrap_mode = 2
